<resources>
    <string name="app_name">TVBox</string>
    <string name="app_home">Home</string>
    <string name="app_source"></string>
    <string name="hm_ok">Load Complete</string>
    <string name="hm_notok">Load Fail</string>
    <string name="hm_retry">Retry</string>
    <string name="hm_cancel">Cancel</string>
    <string name="hm_exit">Press BACK again to EXIT</string>
    <string name="hm_exit_live">Press BACK again to exit LiveTV</string>
    <string name="hm_date1">dd MMM</string>
    <string name="hm_date2">EE HH:mm</string>
    <string name="hm_hist">History</string>
    <string name="hm_live">LiveTV</string>
    <string name="hm_search">Search</string>
    <string name="hm_push">Push</string>
    <string name="hm_file">Drives</string>
    <string name="hm_fav">Favorite</string>
    <string name="hm_setting">Menu</string>
    <string name="hm_karaoke">Karaoke</string>
    <string name="karaoke_no_perm">Storage permission required to scan MV files</string>
    <string name="karaoke_search_hint">Search song/artist</string>
    <string name="karaoke_all_songs">All Songs</string>
    <string name="karaoke_queued_songs">Queued (%d)</string>
    <string name="karaoke_queued_mark">Queued</string>
    <string name="karaoke_add_to_queue">Added: %s</string>
    <string name="karaoke_already_queued">Already queued</string>
    <string name="karaoke_start_play">Play %d songs</string>
    <string name="karaoke_now_playing">Now playing: %s</string>
    <string name="karaoke_not_playing">Not playing</string>
    <string name="karaoke_queue_empty">Queue is empty</string>
    <string name="karaoke_change_folder">Change folder</string>
    <string name="karaoke_all_artists">All</string>
    <string name="karaoke_no_videos">No video files found</string>
    <string name="karaoke_play_error">Playback error, skipping to next</string>
    <string name="karaoke_no_more">No more songs</string>
    <string name="karaoke_next_up">Up next</string>
    <string name="karaoke_now_playing_marquee">Now playing: %1$s　　Up next: %2$s</string>
    <string name="karaoke_no_next_song">(end of queue)</string>
    <string name="karaoke_qr_remote_label">Scan to remote</string>
    <string name="karaoke_continue_play">Continue</string>
    <string name="karaoke_pick_folder">Select MV Folder</string>
    <string name="karaoke_confirm">OK</string>
    <string name="karaoke_cancel">Cancel</string>
    <string name="karaoke_ijk_only">Audio track switching only supported on IJK player</string>
    <string name="karaoke_no_audio_track">No audio track info detected</string>
    <string name="karaoke_select_audio_track">Select Audio Track</string>
    <string name="karaoke_tab_favorites">Favorites</string>
    <string name="karaoke_favorites_empty">No favorites yet</string>
    <string name="karaoke_favorite_added">Added to favorites</string>
    <string name="karaoke_favorite_removed">Removed from favorites</string>
    <string name="karaoke_error_too_many">Too many playback errors, returning to song list</string>
    <string name="karaoke_settings">Karaoke Settings</string>
    <string name="karaoke_settings_scan_recursive">Scan subfolders</string>
    <string name="karaoke_settings_lyric">Show lyrics</string>
    <string name="karaoke_settings_fullscreen_lyric">Fullscreen lyrics (audio)</string>
    <string name="karaoke_settings_bg_carousel">Background carousel (audio)</string>
    <string name="karaoke_settings_rescan">Rescan library</string>
    <string name="karaoke_settings_library_mode">Library mode</string>
    <string name="karaoke_settings_library_mode_local">Local</string>
    <string name="karaoke_settings_library_mode_remote">Online</string>
    <string name="karaoke_settings_api_url">Online library URL</string>
    <string name="karaoke_settings_api_url_none">(not set)</string>
    <string name="karaoke_remote_loading">Loading online library…</string>
    <string name="karaoke_remote_load_failed">Failed to load online library</string>
    <string name="karaoke_remote_no_url">Please set online library URL first</string>
    <string name="karaoke_remote_discovery_pending">Discovering online library…</string>
    <string name="karaoke_remote_discovery_failed">No compatible online library found</string>
    <string name="karaoke_remote_invalid_url">Invalid online library URL</string>
    <string name="karaoke_remote_health_failed">Online library health check failed</string>
    <string name="karaoke_remote_no_stream">Stream URL not available</string>
    <string name="karaoke_remote_no_more">No more tracks</string>
    <string name="dialog_karaoke_api_url_title">Online library URL</string>
    <string name="dialog_karaoke_api_url_hint">http://192.168.1.x:8000</string>
    <string name="karaoke_no_embedded_lyric">No embedded lyrics found; place an external .lrc file</string>
    <string name="karaoke_error_no_folder">No karaoke folder configured</string>
    <string name="karaoke_error_invalid_path">Invalid song path</string>
    <string name="karaoke_error_disk_full">Not enough space to upload file</string>
    <string name="karaoke_upload_progress">Uploading… %d%%</string>
    <string name="karaoke_upload_done">Upload complete</string>
    <string name="karaoke_toast_playing">Playing</string>
    <string name="karaoke_toast_paused">Paused</string>
    <string name="karaoke_toast_track_switched">Switched to: %1$s</string>
    <string name="karaoke_toast_no_multi_track">This song has no alternate audio tracks</string>
    <string name="karaoke_toast_prev_song">Previous: %1$s</string>
    <string name="karaoke_toast_next_song">Next: %1$s</string>
    <string name="karaoke_toast_no_more_songs">No more songs</string>
    <string name="hm_style_line">Line View</string>
    <string name="hm_style_grid">Grid View</string>
    <string name="hm_hist_del">Removed from History</string>
    <string name="hm_cache_del">Cache Cleared</string>
    <string name="det_play">Play</string>
    <string name="det_expand">Expand</string>
    <string name="det_search">Search</string>
    <string name="det_sort">Reverse</string>
    <string name="det_sort_normal">Normal</string>
    <string name="det_push">Push</string>
    <string name="det_fav">Favorite</string>
    <string name="det_fav_add">Added to Favorite</string>
    <string name="det_fav_del">Removed from Favorite</string>
    <string name="det_fav_star">★ Favorite</string>
    <string name="det_fav_unstar">☆ Favorite</string>
    <string name="det_url">Play URL Copied</string>
    <string name="det_source"></string>
    <string name="det_year">Year</string>
    <string name="det_area">Area</string>
    <string name="det_lang">Language</string>
    <string name="det_type">Genre</string>
    <string name="det_actor">Cast</string>
    <string name="det_dir">Director</string>
    <string name="det_des"></string>
    <string name="det_desc">intro</string>
    <string name="mn_config">Configuration Address</string>
    <string name="mn_home">Source</string>
    <string name="mn_home_show">Show Source</string>
    <string name="mn_home_type">Type</string>
    <string name="mn_icon">Button</string>
    <string name="mn_history_num">History</string>
    <string name="mn_live_boot">Autostart Live</string>
    <string name="mn_wall_change">Wallpaper</string>
    <string name="mn_wall_load">Loading Wallpaper</string>
    <string name="mn_wall_reset">Reset</string>
    <string name="mn_play_type">Player</string>
    <string name="mn_play_decode">Decode</string>
    <string name="mn_search">Search Display</string>
    <string name="mn_ratio">Screen Ratio</string>
    <string name="mn_bgplay">Bgplay</string>
    <string name="mn_preview">Preview Window</string>
    <string name="mn_webview">WebView</string>
    <string name="mn_render">Render</string>
    <string name="mn_backup">Backup/Restore</string>
    <string name="mn_dns">DNS</string>
    <string name="mn_locale">Language</string>
    <string name="mn_theme">Theme</string>
    <string name="mn_about">About</string>
    <string name="mn_purify">Skip Ad</string>
    <string name="mn_ijk_cache_play">IJK Cache</string>
    <string name="mn_reset">resetApp</string>
    <string name="mn_fastsearch">FastSearch</string>
    <string name="dia_source">Select Source</string>
    <string name="dia_hm_type">Select Display Type</string>
    <string name="dia_hm_icon">Home Icon Placement</string>
    <string name="dia_history">Select History to Keep</string>
    <string name="dia_history_list">Configuration History List</string>
    <string name="dia_history_live">Live History List</string>
    <string name="dia_history_epg">EPG History List</string>
    <string name="dia_player">Select Player Type</string>
    <string name="dia_decode">Select IJK Decoder</string>
    <string name="dia_search">Select Search Mode</string>
    <string name="dia_ratio">Select Screen Ratio</string>
    <string name="dia_render">Select Render Mode</string>
    <string name="dia_bkres">Backup / Restore</string>
    <string name="dia_bkpkg">Select Backup Package</string>
    <string name="dia_dns">Select DNS</string>
    <string name="dia_locale">Select Language</string>
    <string name="dia_theme">Select Theme</string>
    <string name="dia_confirm">Confirm to Clear All ?</string>
    <string name="dia_reset">Reset Clear Configuration</string>
    <string name="dia_media_setting_title">Media Setting</string>
    <string name="set_bkup_ok">Backup Success</string>
    <string name="set_bkup_del">Backup Deleted</string>
    <string name="set_bkup_fail">Backup Fail</string>
    <string name="set_bkup_fail_hk">Backup Fail (Hawk)</string>
    <string name="set_bkup_fail_db">Backup Fail (DB)</string>
    <string name="set_rest_ok">Restore Success, Automatic Restart</string>
    <string name="set_rest_fail_hk">Restore Fail (Hawk)</string>
    <string name="set_rest_fail_db">Restore Fail (DB)</string>
    <string name="set_permission_ok">Write Permission Granted</string>
    <string name="set_permission_fail1">Failed to get Permission</string>
    <string name="set_permission_fail2">Failed to get Permission, please grant in Settings</string>
    <string name="act_app">Applications</string>
    <string name="act_app_sel">Select to Uninstall</string>
    <string name="act_app_rm">Uninstall</string>
    <string name="act_fav">Favorite</string>
    <string name="act_fav_sel">Select to Remove</string>
    <string name="act_fav_rm">Remove</string>
    <string name="act_drive">Drives</string>
    <string name="act_hist">History</string>
    <string name="act_hist_sel">Select to Remove</string>
    <string name="act_hist_rm">Remove</string>
    <string name="act_live_play_empty_live_url">The live url is not configured, please go to the settings page to configure it</string>
    <string name="act_live_play_empty_channel">The channel list is empty</string>
    <string name="act_live_play_network_error">The network request for the live-streaming address failed</string>
    <string name="act_search">Search</string>
    <string name="act_search_clr">Clear</string>
    <string name="act_search_del">Backspace</string>
    <string name="act_search_rem">Remote</string>
    <string name="act_search_trend">Trending</string>
    <string name="act_search_txt">Enter Search Title</string>
    <string name="act_settings">Settings</string>
    <string name="act_home">Home</string>
    <string name="act_player">Player</string>
    <string name="act_system">System</string>
    <string name="search_input">Input cannot be blank</string>
    <string name="search_site">No source site selected</string>
    <string name="search_checkAll">Select All</string>
    <string name="search_clearAll">Select None</string>
    <string name="fs_show_all">All</string>
    <string name="fs_results">Search Results</string>
    <string name="global_search">global search</string>
    <string name="search">search</string>
    <string name="Select_source">Select source</string>
</resources>