<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="@dimen/vs_640"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_dialog_bg_main"
        android:orientation="vertical"
        android:padding="@dimen/vs_30">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vs_20"
            android:gravity="center"
            android:text="@string/dialog_karaoke_api_url_title"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/ts_24"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input_dialog_api_input"
                android:hint="@string/dialog_karaoke_api_url_hint"
                android:inputType="textUri"
                android:maxLines="1"
                android:paddingLeft="@dimen/vs_10"
                android:paddingTop="@dimen/vs_10"
                android:paddingRight="@dimen/vs_10"
                android:paddingBottom="@dimen/vs_10"
                android:textColor="@color/color_FFFFFF"
                android:textColorHint="@color/color_FFFFFF_50"
                android:textSize="@dimen/ts_22" />

            <LinearLayout
                android:id="@+id/apiHistory"
                android:layout_width="@dimen/vs_80"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/vs_10"
                android:layout_marginLeft="@dimen/vs_10"
                android:background="@drawable/shape_setting_model_focus"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/vs_10">

                <ImageView
                    android:layout_width="@dimen/vs_30"
                    android:layout_height="@dimen/vs_30"
                    android:focusable="true"
                    android:src="@drawable/hm_history" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/inputSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vs_20"
            android:background="@drawable/button_dialog_main"
            android:focusable="true"
            android:gravity="center"
            android:padding="@dimen/vs_10"
            android:text="@string/karaoke_confirm"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/ts_22" />
    </LinearLayout>
</FrameLayout>
