<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/vs_30"
    android:paddingTop="@dimen/vs_20"
    android:paddingRight="@dimen/vs_30"
    android:paddingBottom="@dimen/vs_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/ts_30"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/vs_60"
            android:layout_height="@dimen/vs_60"
            android:background="@drawable/shape_user_home"
            android:padding="@dimen/vs_8"
            app:srcCompat="@drawable/v_back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vs_20"
        android:orientation="horizontal">

        <com.github.tvbox.osc.ui.tv.widget.CustomEditText
            android:id="@+id/etKeyword"
            android:layout_width="0dp"
            android:layout_height="@dimen/vs_50"
            android:layout_weight="1"
            android:background="@drawable/input_search"
            android:hint="@string/act_search_txt"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="@dimen/vs_12"
            android:paddingRight="@dimen/vs_12"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#70FFFFFF"
            android:textSize="@dimen/ts_20" />

        <TextView
            android:id="@+id/tvSearch"
            android:layout_width="@dimen/vs_140"
            android:layout_height="@dimen/vs_50"
            android:layout_marginLeft="@dimen/vs_12"
            android:background="@drawable/shape_user_focus"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/act_search"
            android:textColor="@android:color/white"
            android:textSize="@dimen/ts_20" />

        <TextView
            android:id="@+id/tvClear"
            android:layout_width="@dimen/vs_140"
            android:layout_height="@dimen/vs_50"
            android:layout_marginLeft="@dimen/vs_12"
            android:background="@drawable/shape_user_focus"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/act_search_clr"
            android:textColor="@android:color/white"
            android:textSize="@dimen/ts_20" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vs_15"
        android:textColor="@color/color_FFFFFF_70"
        android:textSize="@dimen/ts_18" />

    <com.owen.tvrecyclerview.widget.TvRecyclerView
        android:id="@+id/mGridView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/vs_15"
        android:layout_weight="1"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingLeft="@dimen/vs_6"
        android:paddingRight="@dimen/vs_6"
        app:tv_selectedItemIsCentered="true"
        app:tv_verticalSpacingWithMargins="@dimen/vs_10" />
</LinearLayout>
