<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <com.github.tvbox.osc.player.MyVideoView
        android:id="@+id/mVideoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llSelectLayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF111111"
        android:orientation="vertical">

        <!-- Top Bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/vs_70"
            android:background="#CC000000"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/vs_15"
            android:paddingRight="@dimen/vs_15">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/vs_40"
                android:layout_height="@dimen/vs_40"
                android:focusable="true"
                android:background="@drawable/button_dialog_vod"
                android:src="@drawable/v_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/vs_15"
                android:text="@string/hm_karaoke"
                android:textColor="@color/color_FFFFFF_90"
                android:textSize="@dimen/ts_26"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="@dimen/vs_45"
                android:layout_marginLeft="@dimen/vs_20"
                android:layout_weight="1"
                android:background="@drawable/input_search"
                android:focusable="true"
                android:hint="@string/karaoke_search_hint"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="@dimen/vs_15"
                android:paddingRight="@dimen/vs_15"
                android:textColor="@color/color_FFFFFF_90"
                android:textColorHint="#70FFFFFF"
                android:textSize="@dimen/ts_20" />

            <TextView
                android:id="@+id/tvChangeFolder"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/vs_45"
                android:layout_marginLeft="@dimen/vs_15"
                android:background="@drawable/button_dialog_vod"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="@dimen/vs_15"
                android:paddingRight="@dimen/vs_15"
                android:text="@string/karaoke_change_folder"
                android:textColor="@color/color_FFFFFF_90"
                android:textSize="@dimen/ts_20" />

            <LinearLayout
                android:id="@+id/llTabs"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/vs_15"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTabAll"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/vs_45"
                    android:background="@drawable/shape_source_flag_focus"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingLeft="@dimen/vs_20"
                    android:paddingRight="@dimen/vs_20"
                    android:text="@string/karaoke_all_songs"
                    android:textColor="@color/color_FFFFFF_90"
                    android:textSize="@dimen/ts_22" />

                <TextView
                    android:id="@+id/tvTabQueue"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/vs_45"
                    android:layout_marginLeft="@dimen/vs_10"
                    android:background="@drawable/shape_source_flag_focus"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingLeft="@dimen/vs_20"
                    android:paddingRight="@dimen/vs_20"
                    android:textColor="@color/color_FFFFFF_90"
                    android:textSize="@dimen/ts_22" />

            </LinearLayout>

        </LinearLayout>

        <!-- Middle Area -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!-- Artist Sidebar -->
            <com.owen.tvrecyclerview.widget.TvRecyclerView
                android:id="@+id/rvArtists"
                android:layout_width="@dimen/vs_200"
                android:layout_height="match_parent"
                android:background="#99000000"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:padding="@dimen/vs_5" />

            <!-- Content Area -->
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.owen.tvrecyclerview.widget.TvRecyclerView
                    android:id="@+id/rvSongGrid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:padding="@dimen/vs_10" />

                <com.owen.tvrecyclerview.widget.TvRecyclerView
                    android:id="@+id/rvQueue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:padding="@dimen/vs_10"
                    android:visibility="gone" />

            </FrameLayout>

        </LinearLayout>

        <!-- Bottom Bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/vs_60"
            android:background="#CC000000"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/vs_20"
            android:paddingRight="@dimen/vs_20">

            <TextView
                android:id="@+id/tvNowPlaying"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/color_FFFFFF_90"
                android:textSize="@dimen/ts_20" />

            <TextView
                android:id="@+id/tvStartPlay"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/vs_45"
                android:background="@drawable/button_dialog_vod"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="@dimen/vs_20"
                android:paddingRight="@dimen/vs_20"
                android:textColor="@color/color_FFFFFF_90"
                android:textSize="@dimen/ts_22"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/ivPlayPauseBottom"
                android:layout_width="@dimen/vs_45"
                android:layout_height="@dimen/vs_45"
                android:layout_marginLeft="@dimen/vs_15"
                android:background="@drawable/button_dialog_vod"
                android:focusable="true"
                android:src="@drawable/v_play"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/ivNextBottom"
                android:layout_width="@dimen/vs_45"
                android:layout_height="@dimen/vs_45"
                android:layout_marginLeft="@dimen/vs_15"
                android:background="@drawable/button_dialog_vod"
                android:focusable="true"
                android:src="@drawable/v_next"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
